fix: restore modal content visibility and add missing modal description styles
- Remove --height:auto from global ion-modal (breaks ion-content rendering with header+footer)
- Add missing .structure-modal-description class to massive-creation-process and massive-property-creation SCSS

--- a/src/app/features/create-condominium/components/massive-property-creation/massive-property-creation.component.scss
+++ b/src/app/features/create-condominium/components/massive-property-creation/massive-property-creation.component.scss
@@ -149,3 +149,16 @@
     margin: 0 auto;
   }
 }
+
+.structure-modal-description {
+  width: 100%;
+  max-width: 25rem;
+  text-align: center;
+  margin: auto;
+}
+
+@media (min-width: 600px) {
+  .structure-modal-description {
+    max-width: 30rem;
+  }
+}
